--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -21,7 +21,7 @@
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
             <a href="ajuda.html" class=" hover:text-gray-800">Ajuda</a>
-            <a href="login.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
+            <a href="cadastro-1.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
         </div>
     </nav>
 
@@ -33,15 +33,15 @@
                 <h2 class="text-black text-4xl font-alfa mb-6">Canais de suporte</h2>
                 <p class="w-200 mb-4">Você também pode entrar em contato através dos seguintes canais:</p>
                 <ul>
-                    <li class="text-2xl mb-4">Email: <strong class="text-black hover:underline hover:text-links">suporte@SAC.com</strong></li>
-                    <li class="text-2xl">WhatsApp: <strong class="text-black hover:underline hover:text-links">(11) 98888-8888</strong></li>
+                    <li class="text-2xl mb-4">Email: <strong class=" hover:underline text-links">suporte@SAC.com</strong></li>
+                    <li class="text-2xl">WhatsApp: <strong class="hover:underline text-links">(11) 98888-8888</strong></li>
                 </ul>
             </section>
             <section class="mt-16">
                 <h2 class="text-black text-4xl font-alfa mb-6">Nossas Redes Sociais</h2>
                 <ul>
-                    <li>Youtube: <a class="font-bold hover:underline hover:text-links" href="" target="_blank">youtube.com/SAC</a></li>
-                    <li>Instagram: <a class="font-bold hover:underline hover:text-links" href="" target="_blank">@SAC</a></li>
+                    <li>Youtube: <a class="font-bold hover:underline text-links" href="" target="_blank">youtube.com/SAC</a></li>
+                    <li>Instagram: <a class="font-bold hover:underline text-links" href="" target="_blank">@SAC</a></li>
                 </ul>
             </section>
         </div>
