--- a/Desenvolvimento Front-End/src/duvidas.html
+++ b/Desenvolvimento Front-End/src/duvidas.html
@@ -20,7 +20,7 @@
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
             <a href="ajuda.html" class=" hover:text-gray-800">Ajuda</a>
-            <a href="login.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
+            <a href="cadastro-1.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
         </div>
     </nav> 
 
