--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Cadastro</title>
-    <!-- <link href="./output.css" rel="stylesheet">
-    <link href="./input.css" rel="stylesheet"> -->
-    <!-- <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script> -->
+    <link href="./output.css" rel="stylesheet">
+    <link href="./input.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
 
 </head>
 <body class="bg-amber-50 font-alexandria flex flex-col lg:flex-row" >
