--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -25,41 +25,47 @@
             <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
             <span class="separator">|</span>
             <a href="ajuda.html" class=" hover:text-gray-800">Ajuda</a>
-            <a href="login.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
+            <a href="cadastro-1.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
         </div>
     </nav>
 
     <main class="bg-fundo1 px-30 py-15">
         <section class="bg-amber-50 flex rounded-3xl px-20 py-15">
             <form id="postForm" class="w-full">
-                <h2 class="text-[clamp(2rem,2vw,2.25rem)] m-0">Criar Postagem</h2>
-                <div class="mb-4">
-                    <label for="titulo" class="block text-sm font-medium">Título:</label>
+                <h2 class="text-[clamp(2rem,2vw,2.25rem)] mb-8">Criar Postagem</h2>
+                <div class="my-8">
+                    <label for="titulo" class="block text-xl mb-1">Título:</label>
                     <input type="text" id="titulo" class="w-full px-3 py-2 border rounded-lg" placeholder="Título da postagem" required>
                 </div>
-                <div class="mb-4">
-                    <label for="categoria" class="block text-sm font-medium">Categoria:</label>
-                    <select id="categoria" class="w-full px-3 py-2 border rounded-lg" required>
-                        <option value="Alimentos">Alimentos</option>
-                        <option value="Roupas">Roupas</option>
-                    </select>
-                </div>
-                <div class="mb-4">
-                    <label for="tipo" class="block text-sm font-medium">Tipo:</label>
+
+                <div class="my-8">
+                    <label for="tipo" class="block text-xl mb-1">Tipo:</label>
                     <select id="tipo" class="w-full px-3 py-2 border rounded-lg" required>
                         <option value="Doação">Doação</option>
                         <option value="Pedido">Pedido</option>
                     </select>
                 </div>
-                <div class="mb-4">
-                    <label for="localizacao" class="block text-sm font-medium">Localização:</label>
+
+                <div class="my-8">
+                    <label for="categoria" class="block text-xl mb-1">Categoria:</label>
+                    <select id="categoria" class="w-full px-3 py-2 border rounded-lg" required>
+                        <option class="" value="Alimentos">Alimentos</option>
+                        <option value="Roupas">Roupas</option>
+                    </select>
+                </div>
+            
+                <div class="my-14">
+                    <label for="localizacao" class="block text-xl mb-1">Localização:</label>
                     <button type="button" id="toggleLocalizacaoBtn" class="w-full px-3 py-2 border rounded-lg bg-gray-100 hover:bg-gray-200">
                         Inserir Localização
                     </button>
+
                     <div id="localizacaoContainer" class="hidden mt-4">
+
                         <div class="mb-4">
                             <label for="estado" class="block text-sm font-medium">Estado:</label>
                             <select id="estado" class="w-full px-3 py-2 border rounded-lg">
+
                                 <option value="">Selecione o Estado</option>
                                 <option value="AC">Acre</option>
                                 <option value="AL">Alagoas</option>
@@ -90,29 +96,32 @@
                                 <option value="TO">Tocantins</option>
                             </select>
                         </div>
+
                         <div class="mb-4">
                             <label for="casa" class="block text-sm font-medium">Lugar:</label>
                             <input type="text" id="casa" class="w-full px-3 py-2 border rounded-lg" placeholder="Ex: Rua das Flores, 123" required>
                         </div>
+
                     </div>
                 </div>
-                <div class="mb-4">
-                    <label for="urgencia" class="block text-sm font-medium">Urgência:</label>
+
+                <div class="my-8">
+                    <label for="urgencia" class="block text-xl mb-1">Urgência:</label>
                     <select id="urgencia" class="w-full px-3 py-2 border rounded-lg" required>
                         <option value="Alta">Alta</option>
                         <option value="Média">Média</option>
                         <option value="Baixa">Baixa</option>
                     </select>
                 </div>
-                <div class="mb-4">
-                    <label for="descricao" class="block text-sm font-medium">Descrição:</label>
+                <div class="my-8">
+                    <label for="descricao" class="block text-xl mb-1">Descrição:</label>
                     <textarea id="descricao" class="w-full px-3 py-2 border rounded-lg" placeholder="Descrição da postagem" required></textarea>
                 </div>
-                <div class="mb-4">
-                    <label for="imagem" class="block text-sm font-medium">Imagem:</label>
+                <div class="my-8">
+                    <label for="imagem" class="block text-xl mb-1">Imagem:</label>
                     <input type="file" id="imagem" class="w-full px-3 py-2 border rounded-lg" accept="image/*">
                 </div>
-                <div class="flex justify-end">
+                <div class="flex justify-end mt-16">
                     <button type="submit" class="px-4 py-2 bg-destaque text-white rounded-lg hover:bg-destaque-dark">Criar Postagem</button>
                 </div>
             </form>
