--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -20,7 +20,7 @@
 
         <div class="bg-amber-50 relative w-full h-screen max-h-screen lg:w-3/4 lg:h-full xl:w-2:3 max-lg:m-[-2rem]">
 
-            <i class="z-10 fa-solid fa-arrow-left bg-destaque m-4  mt-14 sm:m-8 absolute p-3 rounded-4xl" id=""></i>
+            <a href="cadastro-1.html"><i class="z-10 fa-solid fa-arrow-left bg-destaque m-4  mt-14 sm:m-8 absolute p-3 rounded-4xl" id=""></i></a>
 
             <picture>
                 <source class="w-full h-full object-cover" media="(min-width: 64rem)" srcset="../img/fundo-1.png">
