--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -75,7 +75,7 @@
             </form>
 
             <div class="flex justify-center mt-20">
-                <a href="post.html" class="px-6 py-3 bg-destaque text-white rounded-lg hover:bg-destaque-dark">
+                <a href="criandoPost.html" class="px-6 py-3 bg-destaque text-white rounded-lg hover:bg-destaque-dark">
                     Criar Postagens
                 </a>
             </div>
