--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -41,8 +41,8 @@
                 <div class="my-8">
                     <label for="tipo" class="block text-xl mb-1">Tipo:</label>
                     <select id="tipo" class="w-full px-3 py-2 border rounded-lg" required>
-                        <option value="Doação">Doação</option>
-                        <option value="Pedido">Pedido</option>
+                        <option value="DOACAO">Doação</option><!--Value tem que deixar maiúsculo-->
+                        <option value="PEDIDO">Pedido</option>
                     </select>
                 </div>
 
