--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -79,22 +79,8 @@
             <section class="flex items-center justify-center">
                 <div id="postsContainer" class="flex items-center justify-center px-6 py-3 w-full">
                     <div class="flex justify-center ">
-                        <div class="grid grid-cols-3 gap-20 w-full">
-                            <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl mx-auto">
-                                <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
-                                <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
-                                <figcaption class="indent-2 pb-4 text-minitexto">Data: 23/12/2023</figcaption>
-                            </figure>
-                            <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl mx-auto">
-                                <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
-                                <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
-                                <figcaption class="indent-2 pb-4 text-minitexto">Data: 23/12/2023</figcaption>
-                            </figure>
-                            <figure class="shadow-lg drop-shadow-black w-[300px]  h-auto  flex flex-col justify-center rounded-xl m-auto">
-                                <img class="w-100 rounded-t-xl" src="../img/21.jpg" alt="Doação 1">
-                                <figcaption class="indent-2 pt-2 pb-0">Titulo da postagem</figcaption>
-                                <figcaption class="indent-2 pb-4 text-minitexto">Data: 23/12/2023</figcaption>
-                            </figure>
+                        <div class="grid grid-cols-3 gap-20 w-full" id="postsContainerReal">
+                            
                         </div>
                     </div>
                 </div>
