--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -27,7 +27,7 @@
 
     <hr class="text-minitexto">
 
-    <main class="px-30">
+    <main class="px-30 bg-blue-400">
         <section>
             <h2 class="text-black text-5xl my-10 text-center">Postagens</h2>
 
