--- a/Desenvolvimento Front-End/src/perfil.html
+++ b/Desenvolvimento Front-End/src/perfil.html
@@ -118,7 +118,7 @@
                 <div class="grid grid-cols-3 gap-20 w-full">
                    <figure class="w-75 h-65  flex flex-col justify-center rounded-xl m-auto ">
                         <div class="w-full h-full overflow-hidden rounded-t-xl">
-                            <img class="w-full h-full object-cover" src="../img/21.jpg" alt="Doação 1">
+                            <img class="w-full h-full object-cover bg-fundo1" src="../img/Sem Foto.png" alt="Doação 1">
                         </div>
                         <div class="rounded-b-xl drop-shadow-black shadow-lg ">
                             <figcaption class="indent-2 pt-4 pb-0.5 text-neutral-950">Titulo da postagem</figcaption>
