--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -27,7 +27,7 @@
 
     <hr class="text-minitexto">
 
-    <main class="px-30 bg-blue-400">
+    <main class="px-30">
         <section>
             <h2 class="text-black text-5xl my-10 text-center">Postagens</h2>
 
@@ -86,7 +86,7 @@
                 </div>
             </section> -->
 
-            <section id="postsContainer" class="flex justify-center px-6 py-3">
+            <section id="postsContainer" class="flex justify-center px-6 py-10">
                     <div class="grid grid-cols-3 gap-20 w-full" id="postsContainerReal">
                         
                     </div>
