--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -78,7 +78,10 @@
                         <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5 w-full" type="text" name="numeroDocumento" id="numeroDocumento" placeholder="Digite o número do documento" required>
 
 
-                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white"><p><button type="button" id="continueBtn" class="bg-destaque px-4 py-2 rounded-xl text-white">Continuar</button></p></div>
+                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white">
+        <p><button type="button" id="continueBtn" class="bg-destaque px-4 py-2 rounded-xl text-white">Continuar</button></p>
+    </div>
+    <div id="mensagem" class="hidden px-4 py-2 rounded-xl mt-4 text-center"></div>
 
                     </form>
                 </div>
@@ -88,7 +91,10 @@
 
     <script src="javascript/cadastro-1.js"></script>
 
-
+    
+    <div id="modalMensagem" class="hidden fixed inset-0 items-center justify-center bg-black bg-opacity-40 z-50">
+        <div id="modalMensagemTexto" class="bg-red-100 text-red-800 px-8 py-6 rounded-xl text-center shadow-lg"></div>
+    </div>
 </body>
 </html>
 
