--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -72,7 +72,12 @@
                         <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5 w-full" type="password" id="confirmarSenha" name="confirmarSenha" placeholder="Confirmar" required><br>
                         <!-- Fazer com que o confirmar senha só permita cadastrar com as duas senhas sendo iguais -->
 
-                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white"><button type="submit" id="saveBtn" class="bg-destaque px-4 py-2 rounded-xl text-white">Continuar</button></div> <br>
+                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white">
+                            <button type="submit" id="saveBtn" class="bg-destaque px-4 py-2 rounded-xl text-white">Continuar</button>
+                        </div>
+                        <br>
+                        <!-- Adicione o container de mensagem aqui -->
+                        <div id="mensagem" class="hidden px-4 py-2 rounded-xl mt-4 text-center"></div>
                     </form>
                 </div>
             </div>
@@ -82,5 +87,9 @@
 
     <script src="javascript/cadastro-2.js"></script>
     
+   
+    <div id="modalMensagem" class="hidden fixed inset-0 items-center justify-center bg-black bg-opacity-40 z-50">
+        <div id="modalMensagemTexto" class="bg-red-100 text-red-800 px-8 py-6 rounded-xl text-center shadow-lg"></div>
+    </div>
 </body>
 </html>
