--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -54,12 +54,19 @@
                         <input class="bg-amber-50 indent-1 p-1  rounded-md mb-5 w-full" type="password" id="senha_hash" name="senha_hash" placeholder="Senha" required><br>
 
 
-                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white"><button type="submit">Entrar</button></div>
+                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white">
+                            <button type="submit">Entrar</button>
+                        </div>
+                        <div id="mensagem" class="hidden px-4 py-2 rounded-xl mt-4 text-center"></div>
                     </form>
                 </div>
             </div>
         </div>
     </div>
     <script src="./javascript/login-1.js"></script>
+    
+    <div id="modalMensagem" class="hidden fixed inset-0 items-center justify-center bg-black bg-opacity-40 z-50">
+        <div id="modalMensagemTexto" class="bg-red-100 text-red-800 px-8 py-6 rounded-xl text-center shadow-lg"></div>
+    </div>
 </body>
 </html>
