--- a/Desenvolvimento Front-End/src/index-logado.html
+++ b/Desenvolvimento Front-End/src/index-logado.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-amber-50 font-alexandria">
 
-    <nav class="bg-amber-50 text-black flex justify-center items-center">
+    <nav class="bg-amber-50 text-black flex justify-center items-center" id="logado">
         <div class="flex items-center gap-15 py-2 relative">
 
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
