--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -18,18 +18,8 @@
 </head>
 <body class="bg-amber-50 font-alexandria">
 
-    <nav class="bg-amber-50 text-black flex justify-center items-center">
-        <div class="flex items-center gap-15 px-6 py-2">
-
-            <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
-            <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
-            <span class="separator">|</span>
-            <a href="index.html" class="text-destaque font-alfa text-4xl">SAC</a>
-            <span class="separator">|</span>
-            <a href="ajuda.html" class=" hover:text-gray-800 ">Ajuda</a>
-            <a href="cadastro-1.html" class="py-1.25 px-2 rounded-lg bg-fundo1">Cadastre-se</a>
-
-        </div>
+    <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu">
+        
     </nav> 
 
     
