--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -54,16 +54,16 @@
         <div class="flex gap-10">
             <div class="flex flex-col">
                 <h3 class="text-lg">Sobre</h3>
-                <ul class="text-sm hover:text-black text-minitexto duration-500">
-                    <li><a href="duvidas.html">Como o SAC funciona</a></li>
-                    <li><a href="ajuda.html">Central de Ajuda</a></li>
+                <ul>
+                    <li><a href="duvidas.html" class="text-sm hover:text-black text-minitexto duration-500">Como o SAC funciona</a></li>
+                    <li><a href="ajuda.html" class="text-sm hover:text-black text-minitexto duration-500">Central de Ajuda</a></li>
                 </ul>
             </div>
             
             <div class="flex flex-col">
                 <h3 class="text-lg">Doações</h3>
-                <ul class="text-sm hover:text-black text-minitexto duration-500">
-                    <li><a href="postagens.html">Postagens</a></li>
+                <ul>
+                    <li><a href="postagens.html" class="text-sm hover:text-black text-minitexto duration-500">Postagens</a></li>
                 </ul>
             </div>
         </div>
