--- a/Desenvolvimento Front-End/src/index-logado.html
+++ b/Desenvolvimento Front-End/src/index-logado.html
@@ -78,7 +78,7 @@
                                 </ul>
                                 <ul>
                                     <li class="item">
-                                        <a href="#">
+                                        <a href="config-1.html">
                                             <div class="flex items-center">
                                                 <span class="icon"><i class="fa-solid fa-gear"></i></span>
                                                 <span class="text">Configurações</span>
