Consertando Alerts e mensagens

--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -92,8 +92,9 @@
     <script src="javascript/cadastro-1.js"></script>
 
     
-    <div id="modalMensagem" class="hidden fixed inset-0 items-center justify-center bg-black bg-opacity-40 z-50">
-        <div id="modalMensagemTexto" class="bg-red-100 text-red-800 px-8 py-6 rounded-xl text-center shadow-lg"></div>
+    <div id="fundo" class=""></div>
+    <div id="modalCaixa" class="">
+        <div id="modalMensagem" class=""></div>
     </div>
 </body>
 </html>
