--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -21,7 +21,7 @@
 
         <div class="bg-amber-50 relative w-full h-screen max-h-screen lg:w-3/4 lg:h-full xl:w-2:3 max-lg:m-[-2rem]">
 
-            <a href="cadastro-1.html"><i class="z-10 fa-solid fa-arrow-left bg-destaque m-4  mt-14 sm:m-8 absolute p-3 rounded-4xl" id=""></i></a>
+            <a href="cadastro-1.html"><i class="z-10 fa-solid fa-arrow-left bg-destaque m-4  mt-14 sm:m-8 absolute p-3 rounded-4xl text-amber-50" id=""></i></a>
 
             <picture>
                 <source class="w-full h-full object-cover" media="(min-width: 64rem)" srcset="../img/fundo-1.png">
@@ -88,8 +88,9 @@
     <script src="javascript/cadastro-2.js"></script>
     
    
-    <div id="modalMensagem" class="hidden fixed inset-0 items-center justify-center bg-black bg-opacity-40 z-50">
-        <div id="modalMensagemTexto" class="bg-red-100 text-red-800 px-8 py-6 rounded-xl text-center shadow-lg"></div>
+    <div id="fundo" class=""></div>
+    <div id="modalCaixa" class="">
+        <div id="modalMensagem" class=""></div>
     </div>
 </body>
 </html>
