--- a/Desenvolvimento Front-End/src/duvidas.html
+++ b/Desenvolvimento Front-End/src/duvidas.html
@@ -36,15 +36,20 @@
 
             <section class="bg-amber-50 px-30 py-20 flex items-center">
                 <div>
-                    <summary class="w-200 mb-12">Nosso site não se envolve com nenhum tipo de transação de dinheiro ou entrega de produto Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
 
-                    </summary>
+                    <summary class="w-200 mb-12">Nosso site não se envolve com nenhum tipo de transação de dinheiro ou entrega de produto. Toda negociação ou entrega deve ser combinada diretamente entre os usuários, sem envolvimento da plataforma.</summary>
 
-                    <summary class="w-200 mb-8">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae culpa dignissimos tempora minima molestias harum modi aliquam sint, eos accusamus, ipsa repellat debitis odit nihil, amet quia eligendi commodi laborum?</summary>
+                    <summary class="w-200 mb-12">Todas as doações são gratuitas e voluntárias. Não é permitido vender, trocar ou cobrar por qualquer item ou serviço dentro da plataforma.</summary>
 
-                    <summary class="w-200 mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, repellat animi voluptatibus optio, id ad cum nemo pariatur ipsum earum alias odio qui exercitationem quas consectetur reprehenderit. Placeat, quibusdam harum.</summary>
+                    <summary class="w-200 mb-12">Nosso papel é somente intermediar a comunicação entre quem precisa e quem quer ajudar. Não garantimos o sucesso ou a conclusão das interações.</summary>
 
-                    <summary class="w-200">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi nobis similique molestias, expedita provident, quibusdam optio minima non nam consequatur veritatis repellendus? Magni ut quod maiores quasi cupiditate doloribus saepe?.</summary>
+                    <summary class="w-200 mb-12">Caso você perceba alguma postagem estranha, abusiva ou suspeita, é possível fazer uma denúncia diretamente no site, e nossa equipe fará a análise.</summary>
+
+                    <summary class="w-200 mb-12">Só é possível avaliar outro usuário após um contato real, ou seja, quando você efetivamente recebeu ou ofereceu ajuda.</summary>
+
+                    <summary class="w-200 mb-12">Se você identificar uma avaliação falsa ou ofensiva, também poderá denunciá-la para que seja verificada e removida se necessário.</summary>
+
+                    <summary class="w-200 mb-12">O uso da plataforma deve sempre seguir os princípios de respeito, empatia e responsabilidade, lembrando que o objetivo aqui é o bem coletivo.</summary>
                 </div>                
             </section>
 
