--- a/Desenvolvimento Front-End/src/index.html
+++ b/Desenvolvimento Front-End/src/index.html
@@ -35,7 +35,7 @@
         <section class="w-vw h-dvh bg-fundo1 flex items-center px-30">
             <div>
                 <h1 class="text-5xl text-destaque font-alfa publique delay-400">Bem-vindo ao SAC</h1>
-                <p   class="m-4 ml-0 w-150 text-destaque text-2xl publique">Texto sobre quem somos e nosso objetivo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt quia iusto harum repellendus modi explicabo soluta non ut eligendi aperiam quo eos aliquid placeat, pariatur consequatur aut. Voluptatibus, provident mollitia.</p>
+                <p   class="m-4 ml-0 w-150 text-destaque text-2xl publique">Somos uma plataforma comunitária dedicada a conectar pessoas que precisam de ajuda com aquelas dispostas a doar e apoiar. Nosso objetivo é criar um espaço seguro e acessível para facilitar essa comunicação, sempre valorizando o respeito e a transparência.</p>
 
 
             </div>
@@ -47,7 +47,7 @@
             </div>
             <div class="">
                 <h2 class="text-5xl text-destaque font-alfa publiques">Importância de Doar</h2>
-                <p class="m-4 ml-0 w-120 text-destaque text-2xl publiques">Texto explicando a importância de doações. Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam consequuntur nobis, consectetur nulla iure eos similique esse optio rerum consequatur Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet enim eligendi non 
+                <p class="m-4 ml-0 w-120 text-destaque text-2xl publiques">As doações são fundamentais para atender necessidades de pessoas em situação de vulnerabilidade. Elas ajudam a suprir faltas imediatas e facilitam o acesso a recursos básicos. Através do SAC, é possível promover uma resposta rápida e eficaz a essas problematicas. 
                 </p>
             </div>
          </section> 
