Correção de Rodapé

--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -150,7 +150,7 @@
         </div>
         
     
-        <p class="text-sm mt-8">©Sistema de Ajudas Comunitárias (SAC)</p>
+        <p class="text-sm mt-8">©Sistema de Apoio Comunitário (SAC)</p>
     </footer>
 
     <script src="../src/javascript/criacaopost.js"></script>
