--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -114,7 +114,7 @@
         </div>
         
     
-        <p class="text-sm mt-8">©Sistema de Ajudas Comunitárias (SAC)</p>
+        <p class="text-sm mt-8">©Sistema de Apoio Comunitário (SAC)</p>
     </footer>
 
 </body>
