--- a/Desenvolvimento Front-End/src/postagens.html
+++ b/Desenvolvimento Front-End/src/postagens.html
@@ -139,7 +139,7 @@
         </div>
         
     
-        <p class="text-sm mt-8">©Sistema de Ajudas Comunitárias (SAC)</p>
+        <p class="text-sm mt-8">©Sistema de Apoio Comunitário (SAC)</p>
     </footer>
 
     <script src="javascript/postagens.js"></script>
