--- a/Desenvolvimento Front-End/src/cadastro-1.html
+++ b/Desenvolvimento Front-End/src/cadastro-1.html
@@ -10,6 +10,8 @@
 
     <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
 
+    <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
+
 </head>
 <body class="bg-amber-50 font-alexandria flex flex-col lg:flex-row">
 
