--- a/Desenvolvimento Front-End/src/index-logado.html
+++ b/Desenvolvimento Front-End/src/index-logado.html
@@ -28,8 +28,9 @@
             <div>
                 <a href="#">
                     <div class="flex gap-3" >
-                        <div class="p-0 rounded-full overflow-hidden imagem bg-black" id="imagem">
-                            <img id="profileImage" class="object-cover w-full h-full" src="" alt="Foto de Perfil" width="10" height="10">
+                        <div class="p-0 rounded-full overflow-hidden imagem" id="imagem">
+                            <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+
                         </div>
                             <!-- Foto de Perfil  -->
                         <div class="flex flex-col">
@@ -43,8 +44,8 @@
                     <div class="menu p-0">
                         <a href="#">
                             <div class="flex gap-3" >
-                                <div class="p-0 rounded-full overflow-hidden imagem bg-black" id="imagem">
-                                    <img id="profileImage" class="object-cover w-full h-full" src="" alt="Foto de Perfil" width="10" height="10">
+                                <div class="p-0 rounded-full overflow-hidden imagem" id="imagem">
+                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
                                 </div>
                                  <!-- Foto de Perfil  -->
                                 <div class="flex flex-col">
