--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -9,6 +9,8 @@
     
     <!-- npx @tailwindcss/cli -i ./src/input.css -o ./src/output.css --watch -->
 
+    <script src="https://kit.fontawesome.com/8eab5b8649.js" crossorigin="anonymous"></script>
+
 </head>
 <body class="bg-fundo1 font-alexandria">
 
@@ -38,14 +40,14 @@
                 <div class="flex gap-5 items-center w-full">
 
                     <div class="rounded-full overflow-hidden w-14 h-14 bg-gray-300">
-                        <img id="profileImage" class="object-cover w-full h-full" src="../img/right.png" alt="Foto de Perfil" width="50" height="50">
+                        <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="50" height="50">
 
                     </div>
                     <!-- Foto de Perfil -->
                     
                     <div class="flex flex-col">
-                        <span id="profileName" class="text-xl">Satoru Gojo</span>
-                        <span>☆☆☆☆☆</span>
+                        <span id="profileName" class="text-2xl ">Satoru Gojo</span>
+                        <span class="text-xl">☆☆☆☆☆</span>
 
                         <!-- puxar do banco -->
                     </div>
@@ -55,37 +57,39 @@
 
             </div>
 
-            <hr class="text-minitexto">
+            <hr class="text-minitexto my-12">
 
-            <div class="mt-6">
+            <div>
 
-                <p class="mb-1 text-xl">Tipo: </p>
-                <p class="mb-1 text-xl">Categoria: </p>
-                <p class="mb-1 text-xl">Localização: </p>
-                <p class="mb-6 text-xl">Estado da doação: </p>
+                <ul class="text-xl mb-8">
+                    <li class="flex items-center gap-2 mb-4"><p class="font-bold tracking-wide">Tipo:</p> <p>Doação</p></li>
+                    <li class="flex items-center gap-2 mb-4"><p class="font-bold tracking-wide ">Categoria:</p> <p>Comida</p></li>
+                    <li class="flex items-center gap-2 mb-4"><p class="font-bold tracking-wide ">Localização:</p> <p>Shibuya</p></li>
+                    <li class="flex items-center gap-2 mb-4"><p class="font-bold tracking-wide ">Estado da doação:</p> <p>Boa</p></li>
+                </ul>
 
-                <label class="text-xl">Descrição</label>
-                <p name="descricaoPost" id="descricaoPost" class="border-1 mt-1  border-black w-full rounded-xl py-1 px-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta cupiditate debitis perspiciatis fugit tenetur explicabo, accusantium corporis ipsa deserunt sit aliquam molestiae sapiente rerum nemo quidem fugiat. Ex, ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quo voluptatem libero asperiores eum impedit officia ipsa eaque veniam, modi debitis, dolorem omnis. Ratione possimus in tempora mollitia. Dolor, id!</p>
+                <label class="text-xl font-bold tracking-wide ">Descrição</label>
+                <p name="descricaoPost" id="descricaoPost" class="border-1  border-black w-full rounded-xl py-2 px-4 mt-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. A dicta cupiditate debitis perspiciatis fugit tenetur explicabo, accusantium corporis ipsa deserunt sit aliquam molestiae sapiente rerum nemo quidem fugiat. Ex, ad. Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto quo voluptatem libero asperiores eum impedit officia ipsa eaque veniam, modi debitis, dolorem omnis. Ratione possimus in tempora mollitia. Dolor, id!</p>
 
             </div>
 
-            <hr class="text-minitexto my-8">
+            <hr class="text-minitexto my-12">
 
             <section class="flex gap-10 items-center justify-end relative">
-                <div class="w-55 h-55 bg-fundo2 ">
-                    <img class="w-full h-full object-cover" src="../img/fundo-1.png" alt="">
+                <div class="w-55 h-55 bg-fundo2 rounded-3xl overflow-hidden">
+                    <img class="w-full h-full object-cover" src="../img/Erro.png" alt="">
                 </div>
-                <div class="w-55 h-55 bg-fundo2">
-                    <img class="w-full h-full object-cover" src="../img/fundo-1.png" alt=""></div>
-                <div class="w-55 h-55 bg-fundo2"><img class="w-full h-full object-cover" src="../img/fundo-1.png" alt="">
+                <div class="w-55 h-55 bg-fundo2 rounded-3xl overflow-hidden">
+                    <img class="w-full h-full object-cover" src="../img/Erro.png" alt=""></div>
+                <div class="w-55 h-55 bg-fundo2 rounded-3xl overflow-hidden"><img class="w-full h-full object-cover" src="../img/Erro.png" alt="">
                 </div>
-                <div class="w-55 h-55 bg-fundo2">
-                    <img class="w-full h-full object-cover" src="../img/fundo-1.png" alt="">
+                <div class="w-55 h-55 bg-fundo2 rounded-3xl overflow-hidden">
+                    <img class="w-full h-full object-cover" src="../img/Erro.png" alt="">
                 </div>
 
                 <!-- adicionar quantas imagens o usuario colocar na postagem só, não quatro ou mais -->
 
-                <button class="absolute right-[-15px] bg-black rounded-4xl"><img src="../img/right.png" alt=""></button>
+                <button class="absolute right-[-20px] rounded-4xl"><i class="fa-solid fa-arrow-left bg-fundo2 border-1 border-black p-3 rounded-4xl scale-x-[-1] "></i></button>
 
                 <!-- botão só aparece se tiver mais de 4 imagens aqui -->
             </section>
@@ -94,7 +98,7 @@
 
     </main>
 
-    <footer class="px-30 pt-10 pb-5 ">
+    <footer class="px-30 pt-10 pb-5 bg-amber-50">
 
         <div class="flex gap-10">
             <div class="flex flex-col">
