--- a/Desenvolvimento Front-End/src/cadastro-2.html
+++ b/Desenvolvimento Front-End/src/cadastro-2.html
@@ -81,9 +81,10 @@
                                type="password" id="confirmarSenha" name="confirmarSenha" placeholder="Confirmar" required><br>
 
                         <!-- Botão de submit -->
-                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white">
-                            <button type="submit" id="saveBtn" class="bg-destaque px-4 py-2 rounded-xl text-white">Continuar</button>
+                        <div class="relative py-4 rounded-xl mt-2 lg:mt-6">
+                            <button type="submit" id="saveBtn" class="bg-destaque px-6 py-3 rounded-xl absolute text-white hover:bg-[#40b147] duration-100">Cadastrar-se</button>
                         </div>
+                      
                         
                         <!-- Container para mensagens de feedback -->
                         <div id="mensagem" class="hidden px-4 py-2 rounded-xl mt-4 text-center"></div>
