--- a/Desenvolvimento Front-End/src/login.html
+++ b/Desenvolvimento Front-End/src/login.html
@@ -37,9 +37,11 @@
                         <p class="mt-2 lg:mt-4 mb-1">Senha</p>
                         <input class="bg-amber-50 indent-1 p-1 rounded-md mb-5 w-full border border-gray-300 focus:border-destaque focus:ring-1 focus:ring-destaque" type="password" id="senha_hash" name="senha_hash" placeholder="Senha" required>
                         
-                        <div class="mt-6 lg:mt-10 px-4 py-2 bg-destaque rounded-xl inline-block text-white hover:bg-destaque-dark transition-colors">
-                            <button type="submit" class="w-full">Entrar</button>
+
+                        <div class="relative py-4 rounded-xl mt-2 lg:mt-6">
+                            <button id="entrarBtn" type="submit" class="bg-destaque px-6 py-3 rounded-xl absolute text-white hover:bg-[#40b147] duration-100">Entrar</button>
                         </div>
+
                     </form>
                 </div>
             </div>
