--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -123,8 +123,9 @@
                     <label for="imagem" class="block text-xl mb-1">Imagem:</label>
                     <input type="file" id="imagem" class="w-full px-3 py-2 border rounded-lg" accept="image/*">
                 </div>
-                <div class="flex justify-end mt-16">
-                    <button type="submit" class="px-4 py-2 bg-destaque text-white rounded-lg hover:bg-destaque-dark">Criar Postagem</button>
+                
+                <div class="flex justify-end mt-16 mb-8 relative">
+                    <button id="criarBtn" type="submit" class="bg-destaque px-6 py-3 rounded-xl absolute text-white hover:bg-[#40b147] duration-100 text-[18px]">Criar Postagem</button>
                 </div>
             </form>
         </section>
