--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -211,7 +211,7 @@
                 </div>
                 <div class="my-8">
                     <label for="imagem" class="block text-xl mb-1">Imagem:</label>
-                    <input type="file" id="imagem" class="w-full px-3 py-2 border rounded-lg" accept="image/*">
+                    <input type="file" id="imagem" accept="image/*">
                 </div>
                 
                 <div class="flex justify-end mt-16 mb-8 relative">
