--- a/Desenvolvimento Front-End/src/criandoPost.html
+++ b/Desenvolvimento Front-End/src/criandoPost.html
@@ -210,8 +210,8 @@
                     <textarea id="descricao" class="w-full px-3 py-2 border rounded-lg" placeholder="Descrição da postagem" required></textarea>
                 </div>
                 <div class="my-8">
-                    <label for="imagem" class="block text-xl mb-1">Imagem:</label>
-                    <input type="file" id="imagem" accept="image/*">
+                    <label for="imagem2" class="block text-xl mb-1">Imagem:</label>
+                    <input type="file" id="imagem2" accept="image/*">
                 </div>
                 
                 <div class="flex justify-end mt-16 mb-8 relative">
