--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -43,8 +43,8 @@
                 <div class="p-0">
                     <a href="#">
                         <div class="flex gap-3" >
-                            <div class="p-0 rounded-full overflow-hidden" id="imagem2">
-                                <img id="" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                            <div class="p-0 rounded-full overflow-hidden" id="imagem">
+                                <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                             </div>
                                 <!-- Foto de Perfil  -->
@@ -61,7 +61,7 @@
                         <a href="#">
                             <div class="flex gap-3" >
                                 <div class="p-0 rounded-full overflow-hidden" id="imagem">
-                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                                 </div>
                                     <!-- Foto de Perfil  -->
@@ -120,7 +120,7 @@
                     </div>
                 </div>
         </div>
-    </nav> 
+  </nav> 
 
 
 
