--- a/Desenvolvimento Front-End/src/config-1.html
+++ b/Desenvolvimento Front-End/src/config-1.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-amber-50 font-alexandria">
 
-    <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
+<nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
         <div class="flex items-center gap-15 px-6 py-2">
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
             <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
@@ -41,8 +41,8 @@
                 <div class="p-0">
                     <a href="#">
                         <div class="flex gap-3" >
-                            <div class="p-0 rounded-full overflow-hidden" id="imagem2">
-                                <img id="" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                            <div class="p-0 rounded-full overflow-hidden" id="imagem">
+                                <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                             </div>
                                 <!-- Foto de Perfil  -->
@@ -59,7 +59,7 @@
                         <a href="#">
                             <div class="flex gap-3" >
                                 <div class="p-0 rounded-full overflow-hidden" id="imagem">
-                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                                 </div>
                                     <!-- Foto de Perfil  -->
@@ -118,7 +118,7 @@
                     </div>
                 </div>
         </div>
-    </nav> 
+  </nav> 
 
     <hr class="text-minitexto">
 
