--- a/Desenvolvimento Front-End/src/denuncias.html
+++ b/Desenvolvimento Front-End/src/denuncias.html
@@ -42,8 +42,8 @@
                 <div class="p-0">
                     <a href="#">
                         <div class="flex gap-3" >
-                            <div class="p-0 rounded-full overflow-hidden" id="imagem2">
-                                <img id="" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                            <div class="p-0 rounded-full overflow-hidden" id="imagem">
+                                <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                             </div>
                                 <!-- Foto de Perfil  -->
@@ -60,7 +60,7 @@
                         <a href="#">
                             <div class="flex gap-3" >
                                 <div class="p-0 rounded-full overflow-hidden" id="imagem">
-                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                                 </div>
                                     <!-- Foto de Perfil  -->
@@ -119,7 +119,7 @@
                     </div>
                 </div>
         </div>
-    </nav> 
+  </nav> 
 
     <main class="mb-30">
         <section class="py-20 bg-fundo1 px-30 flex items-center">
