--- a/Desenvolvimento Front-End/src/post.html
+++ b/Desenvolvimento Front-End/src/post.html
@@ -38,8 +38,8 @@
                 <div class="p-0">
                     <a href="#">
                         <div class="flex gap-3" >
-                            <div class="p-0 rounded-full overflow-hidden" id="imagem2">
-                                <img id="" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                            <div class="p-0 rounded-full overflow-hidden" id="imagem">
+                                <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                             </div>
                                 <!-- Foto de Perfil  -->
@@ -56,7 +56,7 @@
                         <a href="#">
                             <div class="flex gap-3" >
                                 <div class="p-0 rounded-full overflow-hidden" id="imagem">
-                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/pessoa sem foto.png" alt="Foto de Perfil" width="10" height="10">
+                                    <img id="profileImage" class="object-cover w-full h-full" src="../img/defaultPhoto.png" alt="Foto de Perfil" width="10" height="10">
 
                                 </div>
                                     <!-- Foto de Perfil  -->
@@ -115,7 +115,7 @@
                     </div>
                 </div>
         </div>
-    </nav> 
+  </nav> 
 
   <main class="mx-30 my-10">
     <section class="bg-amber-50 px-15 py-8 rounded-2xl" id="postDetails">
