--- a/Desenvolvimento Front-End/src/duvidas.html
+++ b/Desenvolvimento Front-End/src/duvidas.html
@@ -187,6 +187,15 @@
 
                         <p class="p-4">Você pode acessar a seção de Ajuda e enviar uma mensagem diretamente para nossa equipe.</p>
                     </details>
+
+
+                    <details class="mb-4 border-textos rounded-xl border-1">
+                        <summary class="p-4">Posso denunciar postagens Maliciosas?</summary>
+
+                        <hr>
+
+                        <p class="p-4">Sim você pode atravês do nosso <a href="denuncias.html" class="text-links font-bold">Disque Denuncias</a></p>
+                    </details>
                 </div>
             </section>
         </section>
