--- a/Desenvolvimento Front-End/src/ajuda.html
+++ b/Desenvolvimento Front-End/src/ajuda.html
@@ -106,6 +106,16 @@
                                 </li>
                             </ul>
                             <ul>
+                                <li class="item">
+                                    <a href="denuncias.html ">
+                                        <div class="flex items-center">
+                                            <span class="icon"><i class="fa-solid fa-circle-exclamation"></i></span>
+                                            <span class="text">Denúncias</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul>
                                 <li class="item" id="logout">
                                     <a href="#">
                                         <div class="flex items-center">
@@ -123,8 +133,8 @@
   </nav> 
 
 
-
     <hr class="text-minitexto">
+
 
     <main class="px-30 py-20 flex items-center text-xl">
         <div>
