--- a/Desenvolvimento Front-End/src/config-1.html
+++ b/Desenvolvimento Front-End/src/config-1.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-amber-50 font-alexandria">
 
-<nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
+    <nav class="bg-amber-50 text-black flex justify-center items-center" id="menu-antigo">
         <div class="flex items-center gap-15 px-6 py-2">
             <a href="postagens.html" class=" hover:text-gray-800">Postagens</a>
             <a href="duvidas.html" class=" hover:text-gray-800">Duvidas</a>
@@ -104,6 +104,16 @@
                                 </li>
                             </ul>
                             <ul>
+                                <li class="item">
+                                    <a href="denuncias.html ">
+                                        <div class="flex items-center">
+                                            <span class="icon"><i class="fa-solid fa-circle-exclamation"></i></span>
+                                            <span class="text">Denúncias</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul>
                                 <li class="item" id="logout">
                                     <a href="#">
                                         <div class="flex items-center">
@@ -118,7 +128,7 @@
                     </div>
                 </div>
         </div>
-  </nav> 
+  </nav>
 
     <hr class="text-minitexto">
 
