--- a/Desenvolvimento Front-End/src/denuncias.html
+++ b/Desenvolvimento Front-End/src/denuncias.html
@@ -105,6 +105,16 @@
                                 </li>
                             </ul>
                             <ul>
+                                <li class="item">
+                                    <a href="denuncias.html ">
+                                        <div class="flex items-center">
+                                            <span class="icon"><i class="fa-solid fa-circle-exclamation"></i></span>
+                                            <span class="text">Denúncias</span>
+                                        </div>
+                                    </a>
+                                </li>
+                            </ul>
+                            <ul>
                                 <li class="item" id="logout">
                                     <a href="#">
                                         <div class="flex items-center">
